--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,8 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+@import 'slick-carousel/slick/slick.scss';
+@import 'slick-carousel/slick/slick-theme.scss';
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+@import 'styles';
